# driftballoon-python

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
docs/prompts/: integrate.md
driftballoon/: __init__.py  client.py
examples/: quickstart.py
tests/: __init__.py  conftest.py  test_client.py  test_integration.py
