[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driftballoon"
version = "0.1.0"
description = "Python SDK for DriftBalloon - LLM output drift detection and observability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "DriftBalloon", email = "support@driftballoon.com" }
]
keywords = ["llm", "drift-detection", "monitoring", "prompt-engineering", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "ruff>=0.4.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://driftballoon.com"
Documentation = "https://docs.driftballoon.com"
Repository = "https://github.com/ThinkVD/driftballoon-python"

[tool.hatch.build.targets.wheel]
packages = ["driftballoon"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a running local backend (deselect with '-m \"not integration\"')",
]
